# wordflow

./: .gitignore  .gitmodules  .travis.yml  README.md  wordflow.desktop  wordflow.pro
app/: app.pro  linuxkeyboardhandler.cpp  main.cpp  main.qml  nativekeyboardhandler.h  osxkeyboardhandler.mm  qml.qrc  qtquickcontrols2.conf  testing.cpp  testing.h  vocabulary.cpp  vocabulary.h  vocabularypresenter.cpp  vocabularypresenter.h
app/controls/: ConfigurationPopup.qml  HighlightComponent.qml  Menu.qml  StackViewCommonTransition.qml  StatisticsChart.qml
app/images/: dictionary.icns
app/screens/: AddNewScreen.qml  AddNewVocabularyScreen.qml  EditVocabulariesScreen.qml  (+5 more)
firebaseClient/: CMakeLists.txt
firebaseClient/lib/: CMakeLists.txt
firebaseClient/lib/include/: firebaseclient.h
firebaseClient/lib/src/: connection.cpp  connection.h  firebaseclient.cpp  restclient.cpp  restclient.h
firebaseClient/tests/: CMakeLists.txt
firebaseClient/tests/src/: tests.cpp
lib/: database.cpp  database.h  lib.pro  localemodel.cpp  localemodel.h  sqlerror.cpp  sqlerror.h  sqllearningwordsmodel.cpp  sqllearningwordsmodel.h  sqlstatisticmodel.cpp  sqlstatisticmodel.h  sqlstatisticscommon.h  sqltotalwordsstatisticmodel.cpp  sqltotalwordsstatisticmodel.h  sqlvocabularyeditmodel.cpp  sqlvocabularyeditmodel.h  sqlvocabularymodel.cpp  sqlvocabularyquerymodel.cpp  sqlvocabularyquerymodel.h  sqlwordseditmodel.cpp  sqlwordseditmodel.h  sqlwordsmodel.cpp  sqlwordsmodel.h  statisticchartmodel.cpp  statisticchartmodel.h
tests/: databasetest.cpp  databasetest.h  main.cpp  tests.pro
(+15 files in other folders)
